tests/errors/test_15.x
// Continue must be in a loop construct

fn main() -> void {

    continue;

    if true {
        continue;
    }
}
